syntax = "proto3";
// this is it's own package to avoid name collision with median types like OnchainConfig and BuildReport
option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb/mercury/v1;mercury_v1_pb";

package loop.internal.pb.mercury.v1;


// the generate file in this dir specifies the import path of the relative proto files
// TODO: is there a better, more explicit to reference relayer.proto, which is really in the parent dir?
// naive attempt: import "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb/relayer.proto"; and `../relayer.proto` did not work
import "relayer.proto";

// DataSource is a gRPC adapter for [pkg/types/mercury/v1/DataSource]
service DataSource {
    rpc Observe(ObserveRequest) returns (ObserveResponse) {}
}

// ObserveRequest is the request payload for the Observe method, which is a gRPC adapter for input arguments of [pkg/types/mercury/v1/DataSource.Observe]
message ObserveRequest {
    ReportTimestamp report_timestamp = 1; // common code. TODO: figure out how to share with median impl -- prob need to make internal/pb/median pkg
    bool fetchMaxFinalizedBlockNum = 2;
}

// Block is a gRPC adapter for [pkg/types/mercury/v1/Block]
message Block {
    int64 number = 1;
    string hash = 2;
    uint64 timestamp = 3;
}

// Observation is a gRPC adapter for [pkg/types/mercury/v1/Observation]
message Observation {
    BigInt benchmarkPrice = 1; // TODO: WARNING: this is a pointer in the Observation struct
    BigInt bid = 2; // TODO: WARNING: this is a pointer in the Observation struct
    BigInt ask = 3; // TODO: WARNING: this is a pointer in the Observation struct
    int64 currentBlockNum = 4;
    bytes currentBlockHash = 5;
    uint64 currentBlockTimestamp = 6;
    repeated Block latestBlocks = 7;
    int64 maxFinalizedBlockNumber = 8;
}
// ObserveResponse is the response payload for the Observe method, which is a gRPC adapter for output arguments of [pkg/types/mercury/v1/DataSource.Observe]
message ObserveResponse {
    Observation observation = 1;
}