syntax="proto3";

package mercury;
option go_package = ".;mercury";

// TODO: what about different report formats for different clients?
message MercuryObservationProto {
    uint32 timestamp = 1;
    bytes benchmarkPrice = 2;
    bytes bid = 3;
    bytes ask = 4;
    int64 currentBlockNum = 5;
    bytes currentBlockHash = 6;
    uint64 currentBlockTimestamp = 7;
    int64 validFromBlockNum = 8;
    bool benchmarkPriceValid = 9;
    bool bidValid = 10;
    bool askValid = 11;
    bool currentBlockNumValid = 12;
    bool currentBlockHashValid = 13;
    bool validFromBlockNumValid = 14;
}
